--- a/package.json
+++ b/package.json
@@ -2,12 +2,12 @@
   "name": "words-prefixes",
   "version": "1.0.0",
   "description": "A simple Express server that fetches words based on prefixes.",
-  "main": "src/server.ts",
+  "main": "src/index.ts",
   "scripts": {
     "pck:check": "ncu",
     "pck:update": "ncu -u",
-    "start": "ts-node -r tsconfig-paths/register src/server.ts",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "ts-node -r tsconfig-paths/register src/index.ts",
+    "test": "jest --detectOpenHandles --forceExit"
   },
   "repository": {
     "type": "git",
@@ -21,15 +21,19 @@
   "homepage": "https://github.com/9andresc/words-prefixes#readme",
   "devDependencies": {
     "@types/express": "4.17.8",
+    "@types/jest": "26.0.15",
     "@types/morgan": "1.9.2",
     "@types/node": "14.14.6",
+    "@types/supertest": "2.0.10",
     "@typescript-eslint/eslint-plugin": "4.6.1",
     "@typescript-eslint/parser": "4.6.1",
     "eslint": "7.12.1",
     "eslint-config-prettier": "6.15.0",
     "eslint-plugin-prettier": "3.1.4",
+    "jest": "26.6.3",
     "npm-check-updates": "9.2.4",
     "prettier": "2.1.2",
+    "ts-jest": "26.4.3",
     "ts-node": "9.0.0",
     "tsconfig-paths": "3.9.0",
     "typescript": "4.0.5"
@@ -37,6 +41,7 @@
   "dependencies": {
     "axios": "0.21.0",
     "express": "4.17.1",
-    "morgan": "1.10.0"
+    "morgan": "1.10.0",
+    "supertest": "6.0.1"
   }
 }
